packagelon com.twittelonr.simclustelonrs_v2.candidatelon_sourcelon

import com.twittelonr.finaglelon.stats.StatsReloncelonivelonr
import com.twittelonr.frigatelon.common.baselon.Stats
import com.twittelonr.simclustelonrs_v2.candidatelon_sourcelon.SimClustelonrsANNCandidatelonSourcelon.SimClustelonrsTwelonelontCandidatelon
import com.twittelonr.simclustelonrs_v2.thriftscala.elonmbelonddingTypelon
import com.twittelonr.simclustelonrs_v2.thriftscala.IntelonrnalId
import com.twittelonr.simclustelonrs_v2.thriftscala.ScorelonIntelonrnalId
import com.twittelonr.simclustelonrs_v2.thriftscala.ScoringAlgorithm
import com.twittelonr.simclustelonrs_v2.thriftscala.SimClustelonrselonmbelonddingId
import com.twittelonr.simclustelonrs_v2.thriftscala.SimClustelonrselonmbelonddingPairScorelonId
import com.twittelonr.simclustelonrs_v2.thriftscala.{Scorelon => ThriftScorelon}
import com.twittelonr.simclustelonrs_v2.thriftscala.{ScorelonId => ThriftScorelonId}
import com.twittelonr.util.Futurelon
import com.twittelonr.storelonhaus.RelonadablelonStorelon

objelonct HelonavyRankelonr {
  trait HelonavyRankelonr {
    delonf rank(
      scoringAlgorithm: ScoringAlgorithm,
      sourcelonelonmbelonddingId: SimClustelonrselonmbelonddingId,
      candidatelonelonmbelonddingTypelon: elonmbelonddingTypelon,
      minScorelon: Doublelon,
      candidatelons: Selonq[SimClustelonrsTwelonelontCandidatelon]
    ): Futurelon[Selonq[SimClustelonrsTwelonelontCandidatelon]]
  }

  class UniformScorelonStorelonRankelonr(
    uniformScoringStorelon: RelonadablelonStorelon[ThriftScorelonId, ThriftScorelon],
    stats: StatsReloncelonivelonr)
      elonxtelonnds HelonavyRankelonr {
    val felontchCandidatelonelonmbelonddingsStat = stats.scopelon("felontchCandidatelonelonmbelonddings")

    delonf rank(
      scoringAlgorithm: ScoringAlgorithm,
      sourcelonelonmbelonddingId: SimClustelonrselonmbelonddingId,
      candidatelonelonmbelonddingTypelon: elonmbelonddingTypelon,
      minScorelon: Doublelon,
      candidatelons: Selonq[SimClustelonrsTwelonelontCandidatelon]
    ): Futurelon[Selonq[SimClustelonrsTwelonelontCandidatelon]] = {
      val pairScorelonIds = candidatelons.map { candidatelon =>
        ThriftScorelonId(
          scoringAlgorithm,
          ScorelonIntelonrnalId.SimClustelonrselonmbelonddingPairScorelonId(
            SimClustelonrselonmbelonddingPairScorelonId(
              sourcelonelonmbelonddingId,
              SimClustelonrselonmbelonddingId(
                candidatelonelonmbelonddingTypelon,
                sourcelonelonmbelonddingId.modelonlVelonrsion,
                IntelonrnalId.TwelonelontId(candidatelon.twelonelontId)
              )
            ))
        ) -> candidatelon.twelonelontId
      }.toMap

      Futurelon
        .collelonct {
          Stats.trackMap(felontchCandidatelonelonmbelonddingsStat) {
            uniformScoringStorelon.multiGelont(pairScorelonIds.kelonySelont)
          }
        }
        .map { candidatelonScorelons =>
          candidatelonScorelons.toSelonq
            .collelonct {
              caselon (pairScorelonId, Somelon(scorelon)) if scorelon.scorelon >= minScorelon =>
                SimClustelonrsTwelonelontCandidatelon(pairScorelonIds(pairScorelonId), scorelon.scorelon, sourcelonelonmbelonddingId)
            }
        }
    }
  }
}
